Use vfsStream in testing ScanCommand
vfsStream allows the creation of a virtual filesystem that exists only
in memory, meaning temporary files are truly temporary and don't rely on
an actual, live filesystem.

The only problem here is that SplFileInfo::getRealPath() won't work with
it, so I had to change File. I don't see a reason getPathname() won't
work in this instance.

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "phpunit/phpunit": "4.2.*",
         "codeclimate/php-test-reporter": "dev-master",
         "mockery/mockery": "0.9.*",
-        "akamon/mockery-callable-mock": "~1.0"
+        "akamon/mockery-callable-mock": "~1.0",
+        "mikey179/vfsStream": "~1.4"
     },
     "autoload": {
         "psr-4": {
