--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "symfony/event-dispatcher": "~2.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.2.*",
+        "phpunit/phpunit": "~4.5",
         "codeclimate/php-test-reporter": "dev-master",
         "mockery/mockery": "0.9.*",
         "akamon/mockery-callable-mock": "~1.0",
